name:                agda-ocaml
version:             0.4.0.0
synopsis:            -
description:         Agda to OCaml
license:             BSD3
license-file:        LICENSE
author:              Jan Mas Rovira, Frederik Hanghøj Iversen , Apostolis Xekoukoulotakis
maintainer:          janmasrovira@gmail.com, hanghj@student.chalmers.se , apostolis.xekoukoulotakis@gmail.com
copyright:           Jan Mas Rovira, Frederik Hanghøj Iversen , Apostolis Xekoukoulotakis
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git@github.com:xekoukou/agda-ocaml.git



library
  hs-source-dirs:      src/lib
  exposed-modules:     Agda.Compiler.Malfunction
  other-modules:       Agda.Compiler.Malfunction.AST
                     , Agda.Compiler.Malfunction.Compiler
                     , Agda.Compiler.Malfunction.EraseDefs
                     , Agda.Compiler.Malfunction.Optimize
                     , Agda.Compiler.Malfunction.Pragmas
                     , Agda.Compiler.Malfunction.Primitive
  build-depends:       Agda       >= 2.6.0
                     , base       >= 4.7  && < 5
                     , containers >= 0.5  && < 0.6
                     , extra      >= 1.5  && < 1.7
                     , filepath   >= 1.4  && < 1.5
                     , mtl        >= 2.2  && < 2.3
                     , pretty     >= 1.1  && < 1.2
                     , process    >= 1.4  && < 1.6.4
                     , temporary  >= 1.2  && < 1.4
                     , uniplate   >= 1.6  && < 1.7
                     , directory  == 1.3.*
                     , split      == 0.2.3.3
  default-language:    Haskell2010
  default-extensions:
    NamedWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    ScopedTypeVariables
    ViewPatterns
    DeriveGeneric
    LambdaCase
    TypeApplications
    StandaloneDeriving
    GADTs
    GeneralizedNewtypeDeriving
    TypeFamilies
    MultiParamTypeClasses
    DerivingStrategies
    DeriveAnyClass
    DeriveDataTypeable


executable agda-ocaml
  hs-source-dirs:      src/agda-ocaml
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , agda-ocaml
  default-language:    Haskell2010



-- This test suite should only be run using the Makefile.
-- The Makefile sets up the required environment,
-- executing the tests using cabal directly is almost
-- guarantued to fail. 
test-suite agda-ocaml-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/
  main-is:          Main.hs
  other-modules:      Compiler.Tests
                    , Utils

  build-depends:  agda-ocaml
                , array >= 0.5.1.0 && < 0.6
                , base >= 4.8.0.0 && < 4.13
                , bytestring >= 0.10.6.0 && < 0.11
                , containers >= 0.5.6.2 && < 0.7
                , directory >= 1.2.2.0 && < 1.4
                , filepath >= 1.4.0.0 && < 1.5
                , filemanip >= 0.3.6.3 && < 0.4
                , mtl >= 2.2.1 && < 2.3
                , process >= 1.2.3.0 && < 1.7
                , process-extras >= 0.3.0 && < 0.3.4 || >= 0.4.1.3 && < 0.5 || >= 0.7.1 && < 0.8
                , QuickCheck >= 2.11 && < 2.13
                , regex-tdfa >= 1.2.0 && < 1.3
                , regex-tdfa-text >= 1.0.0.3 && < 1.1
                , tasty >= 1.1.0.4 && < 1.2
                , tasty-hunit >= 0.9.2 && < 0.11
                , tasty-quickcheck >= 0.9.2 && < 0.11
                , tasty-silver >= 3.1.8 && < 3.2
                , temporary >= 1.2.0.3 && < 1.4
                , text >= 1.2.1.0 && < 1.3
                , unix-compat >= 0.4.3.1 && < 0.6
                , uri-encode >= 1.5.0.4 && < 1.6

  default-language:  Haskell2010

  default-extensions:  ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeSynonymInstances
                     , TupleSections



  -- Initially, we disable all the warnings.
  ghc-options: -threaded
               -w
               -Werror

  if impl(ghc >= 8.0)
    ghc-options: -Wunrecognised-warning-flags

  if impl(ghc >= 7.10)
    ghc-options: -fwarn-deprecated-flags
                 -fwarn-deriving-typeable
                 -fwarn-dodgy-exports
                 -fwarn-dodgy-foreign-imports
                 -fwarn-dodgy-imports
                 -fwarn-duplicate-exports
                 -fwarn-empty-enumerations
                 -fwarn-hi-shadowing
                 -fwarn-identities
                 -fwarn-incomplete-patterns
                 -fwarn-inline-rule-shadowing
                 -fwarn-missing-fields
                 -fwarn-missing-methods
                 -fwarn-missing-signatures
                 -fwarn-tabs
                 -fwarn-typed-holes
                 -fwarn-overflowed-literals
                 -fwarn-overlapping-patterns
                 -fwarn-unrecognised-pragmas
                 -fwarn-unticked-promoted-constructors
                 -fwarn-unused-do-bind
                 -fwarn-warnings-deprecations
                 -fwarn-wrong-do-bind


  if impl(ghc >= 8.0)
    ghc-options: -Wmissing-pattern-synonym-signatures
                 -Wnoncanonical-monad-instances
                 -Wnoncanonical-monoid-instances
                 -Wsemigroup
                 -Wunused-foralls


  if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef
                 -Wsimplifiable-class-constraints
                 -Wunbanged-strict-patterns

-- 
-- benchmark agda-ocaml-bench
--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     benchmark/agda-ocaml
--   other-modules:      RedBlack
--                     , Typed
--                     , TypedExist
--                     , Untyped
--                     , AgdaListGen
--   main-is:            Main.hs
--   build-depends:
--                        base
--                      , directory == 1.3.*
--                      , process    >= 1.4 && < 1.6.4
--   default-language:    Haskell2010
-- 
